# deepdanbooryu

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  requirements.txt  setup.cfg
.github/workflows/: deploy.yaml
deepdanbooru_web/src/: client.py  config.py  db.py  docker.py  server.py
deepdanbooru_web/src/templates/: index.html
