[metadata]
name=deepdanbooru_web
version=0.1.0
description=
author=Kamuri Amorim
author_email=myk.gata14@gmail.com
long_description= file: README.md
long_description_content_type=text/markdown
url=
keywords=python
license=GPLv3
[options]
zip_safe = False
packages =
    deepdanbooru_web
install_requires = 
    aiohttp==3.8.4
    aiodocker==0.21.0
    Shimarin==0.0.8
    Flask[async]==2.3.2